Bug 113268 - Pivot table: Missing popup button after opening a pivot table from ODS
Summary: Pivot table: Missing popup button after opening a pivot table from ODS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks: Pivot-Table
  Show dependency treegraph
 
Reported: 2017-10-19 12:53 UTC by Tamás Zolnai
Modified: 2017-10-27 17:14 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Two simple pivot tables (13.32 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-10-19 12:54 UTC, Tamás Zolnai
Details
Screenshot of the issue (81.78 KB, image/png)
2017-10-19 12:55 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-10-19 12:53:44 UTC
Description:
It seems when pivot tables has no column fields, LibreOffice Calc does not handle popup buttons correctly. See the attached test document. You can see two similar pivot table with a bit different layout. The second one has no popup button for Name field, but only a simple button.
After refreshing the pivot table popup button is there again.

Steps to Reproduce:
1. Open attached file in Calc
2. Check the two pivot tables

Actual Results:  
Missing popup button.

Expected Results:
Pivot table should look the same as after a refresh.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36
Comment 1 Tamás Zolnai 2017-10-19 12:54:51 UTC
Created attachment 137115 [details]
Two simple pivot tables
Comment 2 Tamás Zolnai 2017-10-19 12:55:26 UTC
Created attachment 137116 [details]
Screenshot of the issue
Comment 3 Commit Notification 2017-10-19 17:31:45 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=291874c09c4bcde61f2c6808f2df6079f38d74e0

tdf#113268: Pivot table: Missing popup button after opening a ODS

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.